add hof and partial impl
delete tests dir, move all code to src

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -5,7 +5,8 @@ project(fp-jargon CXX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 add_subdirectory(src)
-add_subdirectory(tests)
 
 enable_testing()
-add_test(NAME RunTests COMMAND arity_test)
+add_test(NAME arity COMMAND arity_test)
+add_test(NAME hof COMMAND hof_test)
+add_test(NAME partial COMMAND partial_test)
