--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -10,3 +10,4 @@ enable_testing()
 add_test(NAME arity COMMAND arity_test)
 add_test(NAME hof COMMAND hof_test)
 add_test(NAME partial COMMAND partial_test)
+add_test(NAME curry COMMAND curry_test)
