--- a/c++/src/CMakeLists.txt
+++ b/c++/src/CMakeLists.txt
@@ -3,3 +3,4 @@ include_directories("../src")
 add_executable(arity_test arity_test.cpp)
 add_executable(hof_test hof_test.cpp)
 add_executable(partial_test partial_test.cpp)
+add_executable(curry_test curry_test.cpp)
