add compose impl

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -11,3 +11,4 @@ add_test(NAME arity COMMAND arity_test)
 add_test(NAME hof COMMAND hof_test)
 add_test(NAME partial COMMAND partial_test)
 add_test(NAME curry COMMAND curry_test)
+add_test(NAME compose COMMAND compose_test)
