--- a/c++/src/CMakeLists.txt
+++ b/c++/src/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable(arity_test arity_test.cpp)
 add_executable(hof_test hof_test.cpp)
 add_executable(partial_test partial_test.cpp)
 add_executable(curry_test curry_test.cpp)
+add_executable(compose_test compose_test.cpp)
