add foldable impl

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -12,3 +12,4 @@ add_test(NAME hof COMMAND hof_test)
 add_test(NAME partial COMMAND partial_test)
 add_test(NAME curry COMMAND curry_test)
 add_test(NAME compose COMMAND compose_test)
+add_test(NAME foldable COMMAND foldable_test)
