--- a/c++/src/CMakeLists.txt
+++ b/c++/src/CMakeLists.txt
@@ -5,3 +5,4 @@ add_executable(hof_test hof_test.cpp)
 add_executable(partial_test partial_test.cpp)
 add_executable(curry_test curry_test.cpp)
 add_executable(compose_test compose_test.cpp)
+add_executable(foldable_test foldable_test.cpp)
